Add Mockito test